# fin-chat

./: .gitignore  pyproject.toml
src/: test.ipynb
src/fin-chat/: Dockerfile  package-lock.json  package.json
src/infra/: package-lock.json  tsconfig.json
src/infra/lib/: AppStack.ts
