[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["AJ <arijeet.mkh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.26.5"
transformers = "^4.47.0"
accelerate = "^1.2.0"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
jupyter = "^1.1.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
